# MRArbDcf

./: CHANGELOG  _benchmark.py  benchmark.py  install.bash  log.md  main_Spiral.py  main_Spiral3D.py  main_Yarnball.py  plot.py  psearch.py  pyproject.toml  requirements.txt
example/: example_3d.py  requirements.txt
fars/: Function.py  Utiility.py  __init__.py
mrarbdcf_src/: Function.py
mrautodcf/: Function.py  Utiility.py  Utility.py  __init__.py
